--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Inteligencia Computacional: de los cerebros electrónicos a tu bolsillo</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/extra.css">
 		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
@@ -24,12 +25,21 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-				  <h1>Inteligencia Computacional:</h1>
-				  <h2 class='fragment'>de los cerebros electrónicos a tu bolsillo</h2>
+
+			  <section>
+			    <section data-background='img/electronic-brain.jpg' alt='electronic brain'>
+			      <h1 class='bkg'>Inteligencia Computacional:</h1>
+			      <h2 class='fragment bkg'>de los cerebros electrónicos</h2>
+			      <section 
+				a tu bolsillo</h2>
 				</section>
 
-				<section>Slide 2</section>
+				<section>
+				  
+				  <h2>Créditos</h2>
+				  <ul><li class='credits'><a href='https://www.flickr.com/photos/randar/14554287632/'>#128 Strange Adventures por Tom Simpson</a></li>
+				  </ul>
+				</section>
 			</div>
 		</div>
 
