--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 			  <section>
 			    <section data-background='img/electronic-brain.jpg' alt='electronic brain'>
 			      <h1 class='bkg'>Inteligencia Computacional:</h1>
-			      <h2 class='fragment bkg'>de los cerebros electrónicos</h2>
-			      <section 
-				a tu bolsillo</h2>
-				</section>
+			      <h2 class='fragment bkg'>de los cerebros electrónicos...</h2>
+			    </section>
+
+			    <section data-background='https://farm2.staticflickr.com/1571/23815673664_d54fc19984_z_d.jpg' alt='Amazon echo'>
+				<h2 class='bkg'>... A tu bolsillo</h2>
+				<h2 class='bkg'>JJ Merelo, <a href='http://geneura.wordpress.com'>GeNeura</a>, <a href='http://www.ugr.es'>UGR</a>, <a href='http://twitter.com/jjmerelo'><code>@jjmerelo</code></a></h2>
+			      </section>
+			    </section>
 
 				<section>
 				  
