Añade el test de Feigenbaum

--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
 			      </section>
 			    </section>
 
-				<section>
+			    <section>
+			      <section data-background='https://farm9.staticflickr.com/8058/8198922303_c1281b0d85_k_d.jpg' alt='test de turing'>
+				<h1 class='fragment bkg'>¿Persona o cuñao?</h1>
+				<aside class='notes'>El test de Turing original, según Lenat, era un juego de imitación en el que no se trataba de distinguir entre persona y ordenador, sino entre <a href='https://en.wikipedia.org/wiki/Turing_test'>hombre o mujer</a>. Este test comprueba las capacidades conversacionales de un ordenador, y sólo eso. Pero es muy fácil de engañar, y por tanto, es una forma muy limitada de definir la inteligencia. </aside>
+			      </section> 
+			      <section data-background='https://farm6.staticflickr.com/5347/7224359794_080bcfc2d2_k_d.jpg' alt='village people'>
+			      </section>
+			    </section>
+
+<!-- Créditos -->
+			    <section>
 				  
+
 				  <h2>Créditos</h2>
 				  <ul><li class='credits'><a href='https://www.flickr.com/photos/randar/14554287632/'>#128 Strange Adventures por Tom Simpson</a></li>
+				    <li class='credits'><a href='https://www.flickr.com/photos/cryptik/23815673664/in/photolist-Chvy4b-r9vDnL-rbEmEH-s64bQr-rmmvC2-CoN7k-qrKFKV-q96BLz-qiUVoG-8cXFvp-dJEWe8-Hq36PK-9qoAj1-dAi7pp-f7izxQ-bCf9fv-r4fNrM-9VepYJ-h4CMxQ-5W2Pu6-5BEQu-9xTZXy-4LMEPZ-dYLney-amEn9z-dYLngj-r46KfR-dYEELa-qUmqu6-F5cFMj-dYEEAF-dYLn7s-dYLn57-F9nfFn-GZbBCY-xTR5Pc-GBVc59-GZ5F3A-GZ5DY1-GZ5Dks-GZ5DtU-GZ5Eeb-GC1MwA-GZ5EFo-GZ5Dxm-GW58tr-GZ5DJo-7FU1z4-dYLndd-dYEEJx'>Amazon Echo por Cryptic Merlin</a></li>
+				    <li class='credits'><a href='https://www.flickr.com/photos/saulalbert/8198922303/'>Test de Turing</a> por The People Speak!</li>
+				    <li class='credits'><a href='https://www.flickr.com/photos/13781508@N00/7224359794/'>Little Village Peopl</a> by Libby</li>
 				  </ul>
 				</section>
 			</div>
