Añade blind update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			    <section>
 			      <section data-background='https://farm9.staticflickr.com/8058/8198922303_c1281b0d85_k_d.jpg' alt='test de turing'>
 				<h1 class='fragment bkg'>¿Persona o cuñao?</h1>
-				<aside class='notes'>El test de Turing original, según Lenat, era un juego de imitación en el que no se trataba de distinguir entre persona y ordenador, sino entre <a href='https://en.wikipedia.org/wiki/Turing_test'>hombre o mujer</a>. Este test comprueba las capacidades conversacionales de un ordenador, y sólo eso. Pero es muy fácil de engañar, y por tanto, es una forma muy limitada de definir la inteligencia. </aside>
+				<aside class='notes'>El test de Turing original, según Lenat, era un juego de imitación en el que no se trataba de distinguir entre persona y ordenador, sino entre <a href='https://en.wikipedia.org/wiki/Turing_test'>hombre o mujer</a>. Este test comprueba las capacidades conversacionales de un ordenador, y sólo eso. Pero es muy fácil de engañar, y por tanto, es una forma muy limitada de definir la inteligencia. El test de Turing que se muestra se llama <a href='http://thepeoplespeak.org.uk/blog/2012/12/17/blind-update/'>Blind Update</a>, en el que uno de los concursantes eligió a SAM</aside>
 			      </section> 
 			      <section data-background='https://farm6.staticflickr.com/5347/7224359794_080bcfc2d2_k_d.jpg' alt='village people'>
 			      </section>
