Añade Loquillo y la metáfora

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 			      </section>
 			    </section>
 
+			    <section data-background='https://farm5.staticflickr.com/4086/4994385319_0f060a222f_b_d.jpg' alt='Loquillo'>
+			      <aside class='notes'>No es bueno que el
+			      hombre esté solo, y, como dice Loquillo
+			      en "En las calles de Madrid", <a
+			      href='http://acordes.lacuerda.net/loquillo/en_las_calles_de_madrid'>búscame
+			      en las ondas alguien que hable para
+			      mi</a>. Desde el principio se ha tratado
+			      de buscar alguien con quien conversar,
+			      alguien que te cuente cosas y quizás, de
+				camino, te resuelva algún problema.</aside>
+			    </section>
+
 			    <section>
 			      <section data-background='https://farm9.staticflickr.com/8058/8198922303_c1281b0d85_k_d.jpg' alt='test de turing'>
 				<h1 class='fragment bkg'>¿Persona o cuñao?</h1>
@@ -52,7 +64,11 @@
 				  
 
 				  <h2>Créditos</h2>
-				  <ul><li class='credits'><a href='https://www.flickr.com/photos/randar/14554287632/'>#128 Strange Adventures por Tom Simpson</a></li>
+				  <ul>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/dlombardia/4994385319/'>Loquillo
+				      por David Lombardía</a><</li>
+				    <li class='credits'><a href='https://www.flickr.com/photos/randar/14554287632/'>#128 Strange Adventures por Tom Simpson</a></li>
 				    <li class='credits'><a href='https://www.flickr.com/photos/cryptik/23815673664/in/photolist-Chvy4b-r9vDnL-rbEmEH-s64bQr-rmmvC2-CoN7k-qrKFKV-q96BLz-qiUVoG-8cXFvp-dJEWe8-Hq36PK-9qoAj1-dAi7pp-f7izxQ-bCf9fv-r4fNrM-9VepYJ-h4CMxQ-5W2Pu6-5BEQu-9xTZXy-4LMEPZ-dYLney-amEn9z-dYLngj-r46KfR-dYEELa-qUmqu6-F5cFMj-dYEEAF-dYLn7s-dYLn57-F9nfFn-GZbBCY-xTR5Pc-GBVc59-GZ5F3A-GZ5DY1-GZ5Dks-GZ5DtU-GZ5Eeb-GC1MwA-GZ5EFo-GZ5Dxm-GW58tr-GZ5DJo-7FU1z4-dYLndd-dYEEJx'>Amazon Echo por Cryptic Merlin</a></li>
 				    <li class='credits'><a href='https://www.flickr.com/photos/saulalbert/8198922303/'>Test de Turing</a> por The People Speak!</li>
 				    <li class='credits'><a href='https://www.flickr.com/photos/13781508@N00/7224359794/'>Little Village Peopl</a> by Libby</li>
