--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
 				<h1 class='fragment bkg'>¿Persona o cuñao?</h1>
 				<aside class='notes'>El test de Turing original, según Lenat, era un juego de imitación en el que no se trataba de distinguir entre persona y ordenador, sino entre <a href='https://en.wikipedia.org/wiki/Turing_test'>hombre o mujer</a>. Este test comprueba las capacidades conversacionales de un ordenador, y sólo eso. Pero es muy fácil de engañar, y por tanto, es una forma muy limitada de definir la inteligencia. El test de Turing que se muestra se llama <a href='http://thepeoplespeak.org.uk/blog/2012/12/17/blind-update/'>Blind Update</a>, en el que uno de los concursantes eligió a SAM</aside>
 			      </section> 
-			      <section data-background='https://farm6.staticflickr.com/5347/7224359794_080bcfc2d2_k_d.jpg' alt='village people'>
+			      <section
+			      data-background='https://farm6.staticflickr.com/5347/7224359794_080bcfc2d2_k_d.jpg'
+			      alt='village people'>
+				<aside class='notes'><a
+			      href='https://en.wikipedia.org/wiki/Subject_matter_expert_Turing_test'>El
+				  Text de Feigenbaum</a> considera
+			      diferentes "expertos" en la materia y se
+			      trata de que una máquina sea capaz de
+			      emular los expertos en un campo
+			      determinado, como química o ser
+			      tertuliano. Se propuso en el año 2003 en
+			      un artículo muy interesante sobre los
+			      retos de la inteligencia
+			      computacional. Que se sepa, no se ha
+			      hecho nada parecido, pero...
 			      </section>
 			    </section>
 
