--- a/index.html
+++ b/index.html
@@ -68,9 +68,52 @@
 			      tertuliano. Se propuso en el año 2003 en
 			      un artículo muy interesante sobre los
 			      retos de la inteligencia
-			      computacional. Que se sepa, no se ha
-			      hecho nada parecido, pero...
+			      computacional. En todo caso, todos estos
+			      tests obvian la definición de
+			      inteligencia convirtiéndola en una
+			      prueba pragmática: si parece
+			      inteligente, es inteligente. Pero
+			      también se habla de "consciencia" o
+			      "inteligencia multicanal" porque un bot
+			      conversacional no sabe predecir qué va a
+			      pasar en la bolsa o conducir un
+			      coche. Feigenbaum introdujo el concepto
+			      en el trabajo <a href='http://web.cs.iastate.edu/~honavar/feigenbaum.pdf'>"Some Challenges and Grand Challenges for
+				  Computational Intelligence"</a>,
+			      donde también habla de una serie de
+			      retos y, posiblemente introduce el
+			      término "inteligencia computacional"
+			      para contraponerlo a "inteligencia
+			      real". 
+				  Que se sepa, no se ha
+				  hecho nada parecido, pero...</aside>
 			      </section>
+
+			      <section
+				data-background='https://farm5.staticflickr.com/4074/4884007472_024dedd72d_b_d.jpg'
+			    alt='tres mentirosos'>
+				<aside class='notes'>En su reciente
+			    artículo "What would Turing say", Doug
+			    Lenat propuso una nueva versión: tres
+			    personas enuncian un hecho sobre ellas, y
+			    sólo una dice la verdad. Hay que descubrir
+			    cuál es, y una máquina debe ser capaz de
+			    engañar al público con la misma frecuencia
+			    que una persona (sea cual sea). Sin
+			    embargo, no deja de ser un "truco de
+			    salón", porque con cualquier truco se
+			    puede engañar a quien sea. Doug Lenat va
+			    más allá y habla de que sólo habrá
+			    inteligencia computacional cuando exista una sinergia genuina
+			    entre humano e inteligencia, por ejemplo,
+			    dejar a un PDA o smartphone una cantidad
+			    considerable de las decisiones del día a
+			    día, o cuando haya AIs capaces de aprender
+				  y de evaluar la enseñanza de una
+			    persona. Una inteligencia artificial real
+			    tiene consecuencias también reales, que
+			    veremos más delante</aside>
+			    </section>
 			    </section>
 
 <!-- Créditos -->
@@ -85,7 +128,12 @@
 				    <li class='credits'><a href='https://www.flickr.com/photos/randar/14554287632/'>#128 Strange Adventures por Tom Simpson</a></li>
 				    <li class='credits'><a href='https://www.flickr.com/photos/cryptik/23815673664/in/photolist-Chvy4b-r9vDnL-rbEmEH-s64bQr-rmmvC2-CoN7k-qrKFKV-q96BLz-qiUVoG-8cXFvp-dJEWe8-Hq36PK-9qoAj1-dAi7pp-f7izxQ-bCf9fv-r4fNrM-9VepYJ-h4CMxQ-5W2Pu6-5BEQu-9xTZXy-4LMEPZ-dYLney-amEn9z-dYLngj-r46KfR-dYEELa-qUmqu6-F5cFMj-dYEEAF-dYLn7s-dYLn57-F9nfFn-GZbBCY-xTR5Pc-GBVc59-GZ5F3A-GZ5DY1-GZ5Dks-GZ5DtU-GZ5Eeb-GC1MwA-GZ5EFo-GZ5Dxm-GW58tr-GZ5DJo-7FU1z4-dYLndd-dYEEJx'>Amazon Echo por Cryptic Merlin</a></li>
 				    <li class='credits'><a href='https://www.flickr.com/photos/saulalbert/8198922303/'>Test de Turing</a> por The People Speak!</li>
-				    <li class='credits'><a href='https://www.flickr.com/photos/13781508@N00/7224359794/'>Little Village Peopl</a> by Libby</li>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/13781508@N00/7224359794/'>Little
+				  Village Peopl</a> by Libby</li>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/childgrove/4884007472/'>Tres
+				      mentirosos por Paul Ross</a></li>
 				  </ul>
 				</section>
 			</div>
