--- a/index.html
+++ b/index.html
@@ -116,6 +116,31 @@
 			    </section>
 			    </section>
 
+			    <!-- Lenat, Eurisko y Cyc -->
+			    <section>
+			      <section
+			    data-background='https://farm9.staticflickr.com/8030/7958609280_48cab923a4_h_d.jpg'
+			    alt='Flota de Eve online'>
+				<h1 class='bkg'>Eurisko victorioso</h1>
+				<aside class='notes'>Lenat comenzó con
+			    un programa llamado AM para "Automated
+			    Mathematics". Eventualmente, trató de
+			    buscar un sistema que generalizara mucho
+			    más y acabó creando RLL1, Representation language
+				  language, con el que programó <a
+			    href='https://en.wikipedia.org/wiki/Traveller_%28role-playing_game%29#Rules_system_and_gameplay'>Eurisko</a>,
+			    "Yo descubro", un programa que modificaba
+			    sus propias reglas jugando batallas
+			    masivas en más de 1000 ordenaodres y que
+			    eventualmente ganó el torneo Traveller TCS
+			    (Trillion Credit Squadron) durante dos
+			    años, el segundo con un cambio de reglas a
+			    última hora que se hizo para impedirlo
+			    entrenar correctamente. Finalmente, en el
+			    83, <a href='https://en.wikipedia.org/wiki/Eurisko'>lo excluyeron totalmente de la
+				  competición. </a>
+			      </section>
+			    </section>
 <!-- Créditos -->
 			    <section>
 				  
@@ -133,7 +158,11 @@
 				  Village Peopl</a> by Libby</li>
 				    <li class='credits'><a
 				  href='https://www.flickr.com/photos/childgrove/4884007472/'>Tres
-				      mentirosos por Paul Ross</a></li>
+				      mentirosos por Paul
+				  Ross</a></li>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/jemimus/7958609280/'>Flota
+				      por Robert</a></li>
 				  </ul>
 				</section>
 			</div>
