--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 			    última hora que se hizo para impedirlo
 			    entrenar correctamente. Finalmente, en el
 			    83, <a href='https://en.wikipedia.org/wiki/Eurisko'>lo excluyeron totalmente de la
-				  competición. </a>
+				  competición. </a>.
+				  
+				</aside>
 			      </section>
 			    </section>
 <!-- Créditos -->
