--- a/index.html
+++ b/index.html
@@ -138,8 +138,31 @@
 			    última hora que se hizo para impedirlo
 			    entrenar correctamente. Finalmente, en el
 			    83, <a href='https://en.wikipedia.org/wiki/Eurisko'>lo excluyeron totalmente de la
-				  competición. </a>.
-				  
+				  competición</a>. En "Why AM and Eurisko
+			    appear to work", Lenat y Brown explican
+				  las limitaciones de AM en el
+			    descubrimiento de nuevos conocimientos y
+			    la forma como Eurisko hace la misma
+			    tarea. AM modificaba código Lisp, pero de
+			    una forma dirigida: generalizando, por
+			    ejemplo y siempre dirigida por hallazgos
+			    empíricos. AM tiene éxito por el lenguage
+			    de representación de conceptos matemáticos
+			    usados, el propio LISP, que produce
+				  conceptos válidos bajo mutación
+			    <em>casi siempre</em>. No sucede lo mismo
+			    con la heurística: casi siempre, por
+			    mutación, se producirían reglas
+			    heurísticas falsas o inútiles. Por eso
+			    hace falta extender AM de forma que la
+			    representación de los conceptos se pueda
+			    variar de la misma forma que Lisp
+			    representa conceptos
+			    matemáticos. Cambiando de nivel, se
+			    consigue que las mutaciones no alteren de
+			    forma drástica la funcionalidad, y una
+			    sola mutación hace la misma función que
+			    varias pequeñas mutaciones anteriores.				  
 				</aside>
 			      </section>
 			    </section>
