Notas sobre winograd y SHRLDU

--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
 			    <!-- Lenat, Eurisko y Cyc -->
 			    <section>
 			      <section
+			    data-background='http://hci.stanford.edu/winograd/shrdlu/shrdlu-original.gif'
+			    alt='SHRLDU'>
+				<h1 class='bkg'>SHRLDU</h1>
+				<aside class='notes'>En este caso se
+			    trataba de aplicar algoritmos simples y
+			    estáticos y entender lenguaje natural. Un
+			    gran logro, pero no mucho más. Lo
+				  consiguió Winograd en
+			    Stanford</aside>
+			      </section>
+			      <section
 			    data-background='https://farm9.staticflickr.com/8030/7958609280_48cab923a4_h_d.jpg'
 			    alt='Flota de Eve online'>
 				<h1 class='bkg'>Eurisko victorioso</h1>
@@ -188,6 +199,9 @@
 				    <li class='credits'><a
 				  href='https://www.flickr.com/photos/jemimus/7958609280/'>Flota
 				      por Robert</a></li>
+				    <li class='credits'><a
+				  href='http://hci.stanford.edu/winograd/shrdlu/'>Gráfico
+				      de SHRLDU cargado desde su página original</a></li>
 				  </ul>
 				</section>
 			</div>
