--- a/index.html
+++ b/index.html
@@ -176,6 +176,34 @@
 			    varias pequeñas mutaciones anteriores.				  
 				</aside>
 			      </section>
+
+			      <section>
+				<h1>Representación del
+				conocimiento</h1>
+				<img
+				src='https://farm9.staticflickr.com/8084/8291696699_eaf426558d_o_d.jpg'>
+				<aside class='notes'>Es esencial que
+				se represente, se adquiera y codifique
+				el conocimiento. Eurisko lo adquirió a
+				base de enfrentarse a otros jugadores
+				o bots en un sistema distribuido de
+				10000 ordenadores. De ahí va
+				  adquiriendo una serie de
+				reglas</aside>
+			      </section>
+			      <section
+				data-background='https://farm4.staticflickr.com/3034/3101102763_bef178b184_b_d.jpg'
+				alt='Evolución'>
+				<aside class='notes'>Eurisko también
+				consagró el uso de técnicas
+				"evolutivas" para descubrir nuevo
+				conocimiento. Eventualmente fue capaz
+				de evolucionar una flota con
+				prácticamente ninguna protección,
+				ligeramente armada, pero muy móvil que
+				  se cargó a todo el mundo, porque las
+				reglas evolucionadas así lo decía.</aside>
+			      </section>
 			    </section>
 <!-- Créditos -->
 			    <section>
@@ -201,7 +229,14 @@
 				      por Robert</a></li>
 				    <li class='credits'><a
 				  href='http://hci.stanford.edu/winograd/shrdlu/'>Gráfico
-				      de SHRLDU cargado desde su página original</a></li>
+				      de SHRLDU cargado desde su
+				  página original</a></li>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/thevlue/8291696699/'>Cerebro
+				      de Evan</a></li>
+				    <li class='credits'><a
+				  href='https://www.flickr.com/photos/spaceamoeba/3101102763/'>Evolución
+				      en Lego de Space Amoeba</a></li>
 				  </ul>
 				</section>
 			</div>
