--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
 				  se cargó a todo el mundo, porque las
 				reglas evolucionadas así lo decía.</aside>
 			      </section>
+
+			      <section
+				data-background='https://farm4.staticflickr.com/3791/12824950465_08500cc95f_o_d.jpg'
+				alt='Magneto, mutante maligno'>
+				<aside class='notes'>También había
+				mutantes malignos, como <a
+				  href='http://aliciapatterson.org/stories/eurisko-computer-mind-its-own'>cuenta
+				aquí</a>, con una regla buscando a
+				otras reglas de gran valor y
+				  poniéndose a sí misma como su padre.</aside>
+			      </section>
 			    </section>
 <!-- Créditos -->
 			    <section>
@@ -237,6 +248,9 @@
 				    <li class='credits'><a
 				  href='https://www.flickr.com/photos/spaceamoeba/3101102763/'>Evolución
 				      en Lego de Space Amoeba</a></li>
+				     <li class='credits'><a
+				  href='https://www.flickr.com/photos/visualanthology/12824950465/in/photolist-kxidXB-oYMQJ6-bUthAT-cTeeUs-cfqkyW-5yHVnN-nxkEeC-p1w4sP-nfpsGw-nq13Wn-nhs8Pp-26ocr-NQf5f-8z212u-br96bS-a6fUEM-aiQrX2-brMmWb-6HsGW8-4p5KM8-dDPo7a-2HLHr-ambEsG-6t1CZM-6t5N7u-72H9Lu-pBAV5S-cmNyvY-my5nvP-585tmN-hAuZyf-cvwzso-Agrmt4-8wCFSc-qJCCoF-fuD6Nw-2jeAcd-52o1GQ-nG1ToT-dV2Eab-3khTL-nG1WE1-2a3wpk-avTJSA-dvgv4-5ivUDE-pxWnqg-6hJ7Vv-qugNQR-mbdDh'>Magneto
+				       de Bob Villalobos</a></li>
 				  </ul>
 				</section>
 			</div>
