--- a/index.html
+++ b/index.html
@@ -213,7 +213,26 @@
 				  href='http://aliciapatterson.org/stories/eurisko-computer-mind-its-own'>cuenta
 				aquí</a>, con una regla buscando a
 				otras reglas de gran valor y
-				  poniéndose a sí misma como su padre.</aside>
+				  poniéndose a sí misma como su
+				padre. La <a
+				href='http://members.pcug.org.au/~davidjw/tavspecs/best_tml/Starships%20%28HG%29%20-%20Professor%20Lenat%20and%20EURISKO's%20Winning%20Fleet.htm'>flota
+				  completa</a> no parece estar
+				publicada ni tampoco los fuentes del
+				programa en sí, así que estamos un
+				poco a oscuras. En <a
+				href='http://www.newyorker.com/magazine/2009/05/11/how-david-beats-goliath'>este
+				artículo de Gladwell da algún detalle
+				  sobre cómo lo hizo</a></aside>
+			      </section>
+
+			      <section
+			    data-background='https://farm6.staticflickr.com/5004/5242742037_eeea0048c7_b_d.jpg'
+			    alt='robots'>
+				<aside class='notes'>Y el robot gana,
+			    aprendiendo y con algo de humano, y no lo
+			    completamente no-humanoide de R2d2, retaco
+				  y simpatico, pero sólo útil como
+			    copiloto</aside>
 			      </section>
 			    </section>
 <!-- Créditos -->
@@ -251,6 +270,9 @@
 				     <li class='credits'><a
 				  href='https://www.flickr.com/photos/visualanthology/12824950465/in/photolist-kxidXB-oYMQJ6-bUthAT-cTeeUs-cfqkyW-5yHVnN-nxkEeC-p1w4sP-nfpsGw-nq13Wn-nhs8Pp-26ocr-NQf5f-8z212u-br96bS-a6fUEM-aiQrX2-brMmWb-6HsGW8-4p5KM8-dDPo7a-2HLHr-ambEsG-6t1CZM-6t5N7u-72H9Lu-pBAV5S-cmNyvY-my5nvP-585tmN-hAuZyf-cvwzso-Agrmt4-8wCFSc-qJCCoF-fuD6Nw-2jeAcd-52o1GQ-nG1ToT-dV2Eab-3khTL-nG1WE1-2a3wpk-avTJSA-dvgv4-5ivUDE-pxWnqg-6hJ7Vv-qugNQR-mbdDh'>Magneto
 				       de Bob Villalobos</a></li>
+				     <li class='credits'><a
+				       href='https://www.flickr.com/photos/jdhancock/5242742037/'>Robots
+				       de JD Hancock</a></li>
 				  </ul>
 				</section>
 			</div>
