Finishing the Eurisko cycle

--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@
 			    aprendiendo y con algo de humano, y no lo
 			    completamente no-humanoide de R2d2, retaco
 				  y simpatico, pero sólo útil como
-			    copiloto</aside>
+			    copiloto. En todo caso, un compañero
+			    frente a un justiciero solitario. Dos
+			    visiones muy diferentes del robot, quizás
+			    traídas por el éxito de Eurisko. </aside>
 			      </section>
 			    </section>
 <!-- Créditos -->
