--- a/index.html
+++ b/index.html
@@ -238,7 +238,21 @@
 			    traídas por el éxito de Eurisko. </aside>
 			      </section>
 			    </section>
-<!-- Créditos -->
+
+			    <section>
+			      <section
+			      data-background='https://farm3.staticflickr.com/2745/4446975104_12d6afc416_b_d.jpg'
+			      alt='Terminator'>
+				<h1 class='bkg'>Cyc</h1>
+				<aside class='notes'>Nada molón, pero
+			      cosas</aside>
+			      </section>
+
+			    </section>
+
+
+
+			    <!-- Créditos -->
 			    <section>
 				  
 
@@ -276,6 +290,9 @@
 				     <li class='credits'><a
 				       href='https://www.flickr.com/photos/jdhancock/5242742037/'>Robots
 				       de JD Hancock</a></li>
+				     <li class='credits'><a
+				  href='https://www.flickr.com/photos/jdhancock/4446975104/in/album-72157622993563563/'>Terminator
+				       con Borg</a></li>
 				  </ul>
 				</section>
 			</div>
