--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			    consigue que las mutaciones no alteren de
 			    forma drástica la funcionalidad, y una
 			    sola mutación hace la misma función que
-			    varias pequeñas mutaciones anteriores.				  
+			    varias pequeñas mutaciones anteriores. 				  
 				</aside>
 			      </section>
 
@@ -189,7 +189,14 @@
 				o bots en un sistema distribuido de
 				10000 ordenadores. De ahí va
 				  adquiriendo una serie de
-				reglas</aside>
+				reglas. Lo interesante es que, en ese
+				momento, eso era computación
+				masiva. ¿Dónde tienes 10000
+				ordenadores hoy en día a mano? Pero
+				hay una diferencia fundamental entre
+				Eurisko y SHRDLU. SHRDLU necesita que
+				le expliquen todo el conocimiento,
+				Eurisko lo descubre él solo.</aside>
 			      </section>
 			      <section
 				data-background='https://farm4.staticflickr.com/3034/3101102763_bef178b184_b_d.jpg'
@@ -244,8 +251,26 @@
 			      data-background='https://farm3.staticflickr.com/2745/4446975104_12d6afc416_b_d.jpg'
 			      alt='Terminator'>
 				<h1 class='bkg'>Cyc</h1>
-				<aside class='notes'>Nada molón, pero
-			      cosas</aside>
+				<aside class='notes'>Terminator es
+			      otro robot de los 80, 1984, el mismo
+			      año, pero hasta 1991 no se descubrió que
+			      usaba una "red neuronal" (traducida como
+			      red "neutral" en la versión
+			      española). Ya ni siquiera es hombre, es
+			      sólo un pequeño hijo de puta. Y quien
+			      crea la rebelión de los robots es
+			      Skynet. Cyc, creado en 1984, es lo más
+			      parecido a Skynet que hay. <a
+			      href='https://www.fayerwayer.com/2014/07/revelan-sistema-de-inteligencia-artificial-mas-sofisticado-del-mundo/'>Cyc
+			      no se liberó hasta 2012, pero llevaba
+			      desde, precisamente, 1984, alimentando
+			      Cyc, una evolución, a su vez, de Eurisko
+			      y creada inicialmente en una
+				  corporación, <a
+			      href='https://en.wikipedia.org/wiki/Microelectronics_and_Computer_Technology_Corporation'>MCC</a>,
+			      creado por un antiguo director de la NSA
+			      y vicedirector de la CIA. Lo que no
+			      quiere decir nada, pero ahi lo dejo ;-). </aside>
 			      </section>
 
 			    </section>
