--- a/index.html
+++ b/index.html
@@ -270,9 +270,24 @@
 			      href='https://en.wikipedia.org/wiki/Microelectronics_and_Computer_Technology_Corporation'>MCC</a>,
 			      creado por un antiguo director de la NSA
 			      y vicedirector de la CIA. Lo que no
-			      quiere decir nada, pero ahi lo dejo ;-). </aside>
+			      quiere decir nada, pero ahi lo dejo
+			      ;-). Además, el Borg es una inteligencia
+			      de enjambre, aunque tiene "drones" que
+			      sirven para llevar a cabo todo tipo de
+			      actividades. </aside>
 			      </section>
 
+			      <section>
+				<h1>Representando el conocimiento</h1>
+				<p><a href="https://commons.wikimedia.org/wiki/File:Semantic_Net.svg#/media/File:Semantic_Net.svg"><img alt="Semantic Net.svg" src="https://upload.wikimedia.org/wikipedia/commons/6/67/Semantic_Net.svg" height="190" width="305"></a><br>Public Domain, https://commons.wikimedia.org/w/index.php?curid=1353062</p>
+			      </section>
+
+			      <section>
+				<blockquote>La inteligencia son 10
+				  millones de reglas</blockquote>
+				<h3 class='fragment'>OpenCYC tiene
+				  casi tres millones</h3>
+			      </section>
 			    </section>
 
 
