Añade código Lambda

--- a/index.html
+++ b/index.html
@@ -290,7 +290,42 @@
 			      </section>
 			    </section>
 
+			    <!-- Terminamos con Cyc -->
+			    <section>
+			      <section>
+				<h1>Entonces ocurrió la Ley de
+			    Moore</h1>
+				<h2 class='fragment'>Artefactos
+				  parcialmente inteligentes</h2>
+				<aside class='notes'>Grafos, redes
+			    neuronales, los 90, terminator 2 y 3,
+				  secuelas, secuelas. </aside>
+			      </section>
 
+			      <section>
+				<h2>Retos de Feigenbaum</h2>
+				<h1 class='fragment'>Aprender
+				leyendo</h1>
+				<h1 class='fragment'>Adquirir
+				  conocimiento de la web</h1>
+			      </section>
+			    </section>
+			    <!-- Terminamos con los 90 -->
+
+			    <section>
+			      <section><h1>Cálculo Lambda</h1>
+				<pre><code>#!/usr/bin/ruby
+
+prefijos = %w( pre post ante super macro mega)
+prefijadores = Hash.new
+prefijos.each { |p|
+  prefijadores[p] = lambda { |post| return "#{p}#{post}";}
+}
+
+puts prefijadores['macro'].call( 'objetivo' )
+puts prefijadores['super'].call( 'chanchi' )</code></pre>
+			      </section>
+			    </section>
 
 			    <!-- Créditos -->
 			    <section>
