--- a/index.html
+++ b/index.html
@@ -325,6 +325,33 @@ prefijos.each { |p|
 puts prefijadores['macro'].call( 'objetivo' )
 puts prefijadores['super'].call( 'chanchi' )</code></pre>
 			      </section>
+
+			      <section
+			      data-background='https://farm4.staticflickr.com/3736/13168460614_d07c72654b_z_d.jpg'
+			      alt='Símbolos'>
+			      </section>
+
+			      <section
+			      data-background='https://farm6.staticflickr.com/5313/5814816356_a6d441eeef_o_d.jpg'
+			      alt='neuronas'>
+			      </section>
+
+			       <section
+			      data-background='https://farm6.staticflickr.com/5309/5842845458_e5def53ce5_b_d.jpg'
+			      alt='Profundo'>
+				 <aside class='notes'>Deep learning es
+			      la reedición de las redes neuronales
+			      módulo la ley de Moore. Es más
+			      subsimbólico que simbólico, pero los
+				   símbolos emergen en cada una de las capas</aside>
+			      </section>
+
+			      <section
+			      data-background='http://i.imgur.com/DC2OlIm.jpg'
+			      alt='comparaciones'>
+			      </section>
+			      
+			      
 			    </section>
 
 			    <!-- Créditos -->
@@ -368,6 +395,20 @@ puts prefijadores['super'].call( 'chanchi' )</code></pre>
 				     <li class='credits'><a
 				  href='https://www.flickr.com/photos/jdhancock/4446975104/in/album-72157622993563563/'>Terminator
 				       con Borg</a></li>
+				     <li class='credits'><a
+				  href='https://www.flickr.com/photos/amada_stream/13168460614/'>Símbolos
+				       de Liga Eglite</a></li>
+				      <li class='credits'><a
+				  href='https://www.flickr.com/photos/wellcomeimages/5814816356/'>Neuronas
+					de Wellcome images</a></li>
+
+				       <li class='credits'><a
+				  href='https://www.flickr.com/photos/thomashawk/5842845458/'>Escalera
+					 por Thomas Hawk</a></li>
+
+				       <li class='credits'><a
+				  href='http://imgur.com/a/K4RWn'>Deep
+					 learning training set</a></li>
 				  </ul>
 				</section>
 			</div>
