Añadido a AI Wars

--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@ mlp:add( nn.Linear(25, 1) ) -- 1 salida</code></pre>
 			      <section>
 				<h1>Comienzan las guerras IA</h1>
 			      </section>
+
+			      <section>
+				<h1>IA <em>real</em></h1>
+				<h2>vs</h2>
+				<h1>Inteligencia <em>general</em> artificial</h1>
+			      </section>
 			    </section>
 
 			    <section> <!-- Trabajo propio -->
