--- a/index.html
+++ b/index.html
@@ -302,6 +302,16 @@
 				  secuelas, secuelas. </aside>
 			      </section>
 
+			      <section data-background='img/grace.png'
+				       alt='Grace'>
+				<h1 class='bkg'>La sorprendente
+				  Grace</h1>
+				<aside class='notes'>Creada por un
+				consorcio de universidades para
+				  participar en el Gran Reto de la
+				  AAAI, en 2002.</aside>
+			      </section>
+			      
 			      <section>
 				<h2>Retos de Feigenbaum</h2>
 				<h1 class='fragment'>Aprender
@@ -387,7 +397,12 @@ mlp:add( nn.Linear(25, 1) ) -- 1 salida</code></pre>
 			      <section>
 				<h1>IA <em>real</em></h1>
 				<h2>vs</h2>
-				<h1>Inteligencia <em>general</em> artificial</h1>
+				<h1 class='fragment'>Inteligencia <em>general</em> artificial</h1>
+				<aside class='notes'>Lenat, en su
+				reciente artículo (AI Magazine,
+				primavera 2016), habla de las
+				posibilidades de una inteligencia
+				artificial Real. 
 			      </section>
 			    </section>
 
@@ -468,7 +483,11 @@ mlp:add( nn.Linear(25, 1) ) -- 1 salida</code></pre>
 					 href='https://www.flickr.com/photos/michaeljzealot/16639251005/'>Amazon Echo de nuevo por Michael J</a></li>
 				       <li class='credits'><a
 							      href='https://www.flickr.com/photos/lightknight/3176554248/'>Tui ilustrando coevolución</a> por Robin Ducker</li>
-				    <li class='credits'><a href='https://www.flickr.com/photos/mrwynd/10368538093/'>Hearthstone por MrWynd</a></li>
+				    <li class='credits'><a href='https://www.flickr.com/photos/mrwynd/10368538093/'>Hearthstone
+					por MrWynd</a></li>
+				    <li class='credits'>Imagen de
+				    Grace del artículo "“Excuse me, where’s the registration desk?”
+				      Report on Integrating Systems for the Robot Challenge AAAI 2002"</li>
 				       
 				  </ul>
 				</section>
